# microgrid-graph

./: .gitignore  PROGRESS.md  PROPOSAL.md  README.md  pyproject.toml
configs/: feeder_atlas.yaml  smoke_case33bw.yaml  topology_split_v1.yaml
docs/: 01_problem_statement.md  02_research_goal.md  03_collaborator_brief.md  04_division_of_labor.md  05_experimental_protocol.md  06_theory_sketch.md  07_related_work_map.md  08_timeline.md  09_repro_and_env.md
notes/: README.md
notes/legacy/: Neuritis.eml  activityloss_regeneration_summary.md  baseline_dataset_attack_map.md  old_readme.md  paper_comparison_execution_plan.md  physics_validation_note.md  public_benchmark_comparison_note.md  public_model_selection_note.md
paper/: neurips_activityloss_paper.tex
src/: README.md  __init__.py
src/sg_resilience/: __init__.py  baseline_opt.py  baseline_opt_runner.py  baseline_rule.py  baseline_runner.py  benchmark_loader.py  config_loader.py  controller_model.py  floor_targets.py  model_selection.py  physics_eval.py  priority_metrics.py  scenario_generator.py  scenario_schema.py  serialization.py  smoke.py  training.py
