[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sg_resilience"
version = "0.1.0"
description = "Topology-generalizing graph control for catastrophic grid events"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "networkx>=3.0",
    "pandapower>=2.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
simbench = ["simbench>=1.4"]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sg_resilience*"]
